--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <!-- navbar starts  -->
+    <nav
+      class="flex bg-[#2B2B2B] text-white h-10 p-5 justify-between items-center"
+    >
+      <div class="text-[20px] font-bold">LOGO</div>
+      <div><img src="icon_bar.png" alt="" /></div>
+    </nav>
+    <!-- navbar ends  -->
+
+    <main>
+      <!-- hero section starts here  -->
+      <section class="bg-[#696949] text-white">
+        <!-- hero content start  -->
+        <div class="flex flex-col pt-20 px-5 gap-2">
+          <h1 class="text-xl font-medium">
+            WE PROVIDE<br />ARCHITECTURAL DESIGN<br />AND CONSTRUCTION
+          </h1>
+          <p class="text-[#C4C4C4] font-base">
+            More than 100 building and housing projects that we have built. The
+            building owner chose us over other contractors in Jakarta, because
+            our work is different
+          </p>
+          <button
+            class="flex self-start text-base font-semibold bg-blue-400 py-1.5 px-3 mt-2"
+          >
+            Discover Mode
+          </button>
+        </div>
+        <!-- hero content end  -->
+
+        <!-- hero image starts here  -->
+        <div class="flex justify-end -mt-32 ">
+          <img src="hero_building.png" alt="">
+        </div>
+        <!-- hero image ends here  -->
+      </section>
+
+      <!-- hero section ends here  -->
+    </main>
+
+    <script type="module" src="/main.css"></script>
   </body>
 </html>
